base/prod/azure-ingress-gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-app-ingress-v1
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    kubernetes.azure.com/app-routing-zone: ""
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/get-catalog"
        backend:
          service:
            name: shop-front-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /login-page
        backend:
          service:
            name: login-page-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /login
        backend:
          service:
            name: login-page-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /signup
        backend:
          service:
            name: login-page-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /logout
        backend:
          service:
            name: login-page-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /add-product
        backend:
          service:
            name: product-admin-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /add-product-page
        backend:
          service:
            name: product-admin-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /play-songs
        backend:
          service:
            name: song-player-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /history-page
        backend:
          service:
            name: history-svc
            port:
              number: 5000
      - pathType: Prefix
        path: "/log-play"
        backend:
          service:
            name: history-svc
            port:
              number: 5000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shop-front-svc
            port:
              number: 5000
